--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -1,7 +1,7 @@
 server
 {
         listen 80;
-        server_name b.openaixx.com;
+        server_name f.openaicac.com;
         index index.html;
         location / {
                 proxy_pass https://api.openai.com;
